Update 'nodejs-mcpyhxhb' component image to: artifactory-docker-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/nodejs-mcpyhxhb:d34ade1fee5b9449d2a579c14afe51606c309e98@sha256:cf875fccd67f5682f1fa160b6a9e8a825e0dc2c7868bdb752c2015d64cdbf050

--- a/components/nodejs-mcpyhxhb/overlays/development/deployment-patch.yaml
+++ b/components/nodejs-mcpyhxhb/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nodejs-mcpyhxhb
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: artifactory-docker-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/nodejs-mcpyhxhb:d34ade1fee5b9449d2a579c14afe51606c309e98@sha256:cf875fccd67f5682f1fa160b6a9e8a825e0dc2c7868bdb752c2015d64cdbf050
+          name: container-image
